@@ -1,3 +1,8 @@
+2018-04-17  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* panelayoutmanager/panelayoutmanager_impl.C (remove_pane): Removal
+	of pane #0 didn't work correctly.
+
 0.4
 
 2018-04-15  Sam Varshavchik  <mrsam@courier-mta.com>
